updated menu page

--- a/public/pages/account.html
+++ b/public/pages/account.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>OpenTab - Invoice</title>
+    <title>OpenTab - Account</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Prompt&display=swap"
       rel="stylesheet"
