--- a/public/pages/menu.html
+++ b/public/pages/menu.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>OpenTab - Manage Menu</title>
+    <title>OpenTab - Menu</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Prompt&display=swap"
       rel="stylesheet"
@@ -44,7 +44,37 @@
       </div>
 
       <div class="menu-container">
-        <div></div>
+        <div class="menu-nav">
+          <div>
+            <h3>Manage Your Menu</h3>
+          </div>
+
+          <div class="menu-controls">
+            <button id="addMenuItem" class="btn" onclick="">
+              Add Item
+            </button>
+          </div>
+        </div>
+
+        <div class="menu-items-container">
+          <div class="items-section">
+            <div class="section-title">
+              <h2>Drinks</h2>
+            </div>
+            <div class="items-list">
+              <div class="menu-item"></div>
+            </div>
+          </div>
+
+          <div class="items-section">
+            <div class="section-title">
+              <h2>Food</h2>
+            </div>
+            <div class="items-list">
+              <div class="menu-item"></div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
