Added homepage content

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,19 @@
       </div>
     </nav>
 
-    <div></div>
+    <div class="picture-container"></div>
+
+    <div class="text">
+      <h1 style="font-size: 50px;">Shake it up and order up with OpenTab!</h1>
+      <p>Expand your busines and boost sales!</p>
+      <button
+        class="sign-up-button"
+        type="button"
+        onclick="window.location.href='/register'"
+      >
+        Start your tab today!
+      </button>
+    </div>
 
     <script src="/public/js/slide-nav.js"></script>
   </body>
