updated menu page

--- a/public/pages/menu.html
+++ b/public/pages/menu.html
@@ -62,7 +62,35 @@
               <h2>Drinks</h2>
             </div>
             <div class="items-list">
-              <div class="menu-item"></div>
+              <div class="menu-item">
+                <div class="item-name">
+                  <h4>Budlight</h4>
+                </div>
+                <div class="item-desc">
+                  <h5>$3.00</h5>
+                  <p>12oz Bottle</p>
+                </div>
+              </div>
+
+              <div class="menu-item">
+                <div class="item-name">
+                  <h4>Angry Orchard's Cider</h4>
+                </div>
+                <div class="item-desc">
+                  <h5>$4.00</h5>
+                  <p>12oz Bottle</p>
+                </div>
+              </div>
+
+              <div class="menu-item">
+                <div class="item-name">
+                  <h4>Lime Margarita</h4>
+                </div>
+                <div class="item-desc">
+                  <h5>$8.00</h5>
+                  <p>Tequila, Fresh Limeade, Salt</p>
+                </div>
+              </div>
             </div>
           </div>
 
@@ -71,7 +99,15 @@
               <h2>Food</h2>
             </div>
             <div class="items-list">
-              <div class="menu-item"></div>
+              <div class="menu-item">
+                <div class="item-name">
+                  <h4>Fries</h4>
+                </div>
+                <div class="item-desc">
+                  <h5>$4.00</h5>
+                  <p>Cripsy thin cut fries w/ salt</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
