Added homepage content

--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,24 @@
       </button>
     </div>
 
+    <div class="business-text">
+      <h2 style="text-align: center;">
+        Fill up drinks the best way possible
+      </h2>
+      <p style="text-align: center;">
+        Keep the drinks and business flowing by attracting thousands of thirsty
+        peeople who order through our service.
+      </p>
+      <ul class="business-list">
+        <li>Give people the ability to order directly through our app</li>
+        <li>
+          Minimize contact between staff and guests with payment built into the
+          app
+        </li>
+        <li>Guarantee revenue and more customers</li>
+      </ul>
+    </div>
+
     <script src="/public/js/slide-nav.js"></script>
   </body>
 </html>
