fixed bullet issue with list, updated css

--- a/public/index.html
+++ b/public/index.html
@@ -26,36 +26,44 @@
       </div>
     </nav>
 
-    <div class="picture-container"></div>
-
-    <div class="text">
-      <h1 style="font-size: 50px;">Shake it up and order up with OpenTab!</h1>
-      <p>Expand your busines and boost sales!</p>
-      <button
-        class="sign-up-button"
-        type="button"
-        onclick="window.location.href='/register'"
-      >
-        Start your tab today!
-      </button>
+    <div class="picture-container">
+      <div class="picture"></div>
+      <div class="text">
+        <h1 style="font-size: 50px;">Shake it up and order up with OpenTab!</h1>
+        <p>Expand your business and boost sales!</p>
+        <button
+          class="sign-up-button"
+          type="button"
+          onclick="window.location.href='/register'"
+        >
+          Start your tab today!
+        </button>
+      </div>
     </div>
 
-    <div class="business-text">
-      <h2 style="text-align: center;">
-        Fill up drinks the best way possible
-      </h2>
-      <p style="text-align: center;">
-        Keep the drinks and business flowing by attracting thousands of thirsty
-        peeople who order through our service.
-      </p>
-      <ul class="business-list">
-        <li>Give people the ability to order directly through our app</li>
-        <li>
-          Minimize contact between staff and guests with payment built into the
-          app
-        </li>
-        <li>Guarantee revenue and more customers</li>
-      </ul>
+    <div class="business-container">
+      <div class="business-info">
+        <h2>
+          Fill up drinks the best way possible
+        </h2>
+        <p>
+          Keep the drinks and business flowing by attracting thousands of
+          thirsty people who order through our service.
+        </p>
+
+        <ul class="business-list">
+          <li>Give people the ability to order directly through our app</li>
+          <li>
+            Minimize contact between staff and guests with payment built into
+            the app
+          </li>
+          <li>Guarantee revenue and more customers</li>
+        </ul>
+      </div>
+
+      <div class="business-image">
+        <h1>IMAGE</h1>
+      </div>
     </div>
 
     <script src="/public/js/slide-nav.js"></script>
