Added businiess info and picture to homepage

--- a/public/index.html
+++ b/public/index.html
@@ -61,8 +61,8 @@
         </ul>
       </div>
 
-      <div class="business-image">
-        <h1>IMAGE</h1>
+      <div class="business-image-container">
+        <div class="business-image" />
       </div>
     </div>
 
