added orders, invoice, and account pages

--- a/public/pages/account.html
+++ b/public/pages/account.html
@@ -44,7 +44,52 @@
       </div>
 
       <div class="account-container">
-        <div></div>
+        <div class="menu-nav">
+          <div>
+            <h3>Account Details</h3>
+          </div>
+        </div>
+
+        <div class="account-info-container">
+          <div class="restaurant-info-section">
+            <div class="section-title">
+              <h2>Restaurant Information</h2>
+            </div>
+            <div class="restaurant-info">
+              <div class="restaurant-name">
+                <h3>Patel's Best</h3>
+              </div>
+
+              <div class="restaurant-email">
+                <h4>Email:</h4>
+                <p>patelsbest@gmail.com</p>
+              </div>
+
+              <div class="restaurant-phone">
+                <h4>Phone:</h4>
+                <p>1-234-345-5322</p>
+              </div>
+
+              <div class="restaurant-location">
+                <h4>Address:</h4>
+                <p>550 Huntington Ave</p>
+                <p>Boston, MA 02115</p>
+              </div>
+
+              <div class="restaurant-desc">
+                <h4>Description:</h4>
+                <p>
+                  Patel's Best is where you can find the finest indian food in
+                  all of Boston.
+                </p>
+              </div>
+
+              <div class="control-order">
+                <h3>EDIT DESCRIPTION</h3>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
