--- a/public/pages/invoice.html
+++ b/public/pages/invoice.html
@@ -44,7 +44,68 @@
       </div>
 
       <div class="invoice-container">
-        <div></div>
+        <div class="menu-nav">
+          <div>
+            <h3>View Invoice</h3>
+          </div>
+        </div>
+
+        <div class="invoice-items-container">
+          <div class="invoice-items-section">
+            <div class="section-title">
+              <h2>Order History</h2>
+            </div>
+            <div class="items-list">
+              <div class="invoice-item">
+                <div class="invoice-item-order-id">
+                  <h3>Order#1234153</h3>
+                </div>
+                <div class="invoice-item-total">
+                  <h5>Total: $10.89</h4>
+                </div>
+                <div class="invoice-item-date">
+                  <h5>Date: 02-05-2020</h5>
+                </div>
+              </div>
+
+              <div class="invoice-item">
+                <div class="invoice-item-order-id">
+                  <h3>Order#1234153</h3>
+                </div>
+                <div class="invoice-item-total">
+                  <h5>Total: $10.89</h4>
+                </div>
+                <div class="invoice-item-date">
+                  <h5>Date: 02-05-2020</h5>
+                </div>
+              </div>
+
+              <div class="invoice-item">
+                <div class="invoice-item-order-id">
+                  <h3>Order#1234153</h3>
+                </div>
+                <div class="invoice-item-total">
+                  <h5>Total: $10.89</h4>
+                </div>
+                <div class="invoice-item-date">
+                  <h5>Date: 02-05-2020</h5>
+                </div>
+              </div>
+
+              <div class="invoice-item">
+                <div class="invoice-item-order-id">
+                  <h3>Order#1234153</h3>
+                </div>
+                <div class="invoice-item-total">
+                  <h5>Total: $10.89</h4>
+                </div>
+                <div class="invoice-item-date">
+                  <h5>Date: 02-05-2020</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
