--- a/public/pages/orders.html
+++ b/public/pages/orders.html
@@ -44,7 +44,129 @@
       </div>
 
       <div class="orders-container">
-        <div></div>
+        <div class="menu-nav">
+          <div>
+            <h3>Today's Orders</h3>
+          </div>
+        </div>
+
+        <!------------------------>
+        <!------ ORDERS LIST ----->
+        <!------------------------>
+        <div class="order-items-container">
+          <div class="items-section">
+            <div class="section-title">
+              <h2>Current</h2>
+            </div>
+
+            <div class="items-list">
+              <div class="order-item">
+                <div class="order-id">
+                  <h3>Order#1235412</h4>
+                </div>
+
+                <div class="customer-name">
+                  <h4>Cam Liddell</h4>
+                </div>
+
+                <div class="ordered-items">
+                  <h4>Ordered Items:</h4>
+
+                  <div class="ordered-items-list">
+                    <p>2x Budlight</p>
+                    <p>1x Fries</p>
+                    <p>1x Angry Orchard</p>
+                  </div>
+
+                  <div class="order-total">
+                    <h4>Total: $14.00</h4>
+                  </div>
+                </div>
+
+                <div class="order-note">
+                  <h4>Note:</h4>
+                  <p>Please put extra ketchup on the side!</p>
+                </div>
+
+                <div class="control-order">
+                  <h3>FINISH ORDER</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="items-section">
+            <div class="section-title">
+              <h2>Pending</h2>
+            </div>
+
+            <div class="order-item">
+              <div class="order-id">
+                <h3>Order#1239544</h3>
+              </div>
+
+              <div class="customer-name">
+                <h4>Cam Liddell</h4>
+              </div>
+
+              <div class="ordered-items">
+                <h4>Ordered Items:</h4>
+
+                <div class="ordered-items-list">
+                  <p>2x Budlight</p>
+                </div>
+
+                <div class="order-total">
+                  <h4>Total: $6.00</h4>
+                </div>
+              </div>
+
+              <div class="order-note">
+                <h4>Note:</h4>
+                <p>None</p>
+              </div>
+
+              <div class="control-order">
+                <h3>START ORDER</h3>
+              </div>
+            </div>
+          </div>
+
+          <div class="items-section">
+            <div class="section-title">
+              <h2>Completed</h2>
+            </div>
+
+            <div class="items-list">
+              <div class="order-item">
+                <div class="order-id">
+                  <h3>Order#1239544</h3>
+                </div>
+  
+                <div class="customer-name">
+                  <h4>Cam Liddell</h4>
+                </div>
+  
+                <div class="ordered-items">
+                  <h4>Ordered Items:</h4>
+  
+                  <div class="ordered-items-list">
+                    <p>2x Budlight</p>
+                  </div>
+  
+                  <div class="order-total">
+                    <h4>Total: $6.00</h4>
+                  </div>
+                </div>
+
+                <div class="order-note">
+                  <h4>Note:</h4>
+                  <p>None</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
